--- a/docker/Dockerfile.service-base
+++ b/docker/Dockerfile.service-base
@@ -15,7 +15,7 @@ RUN hail-pip-install /hailtop && rm -rf /hailtop
 
 COPY gear/setup.py /gear/setup.py
 COPY gear/gear /gear/gear/
-RUN hail-pip-install /gear && -rf /gear
+RUN hail-pip-install /gear && rm -rf /gear
 
 COPY web_common/setup.py web_common/MANIFEST.in /web_common/
 COPY web_common/web_common /web_common/web_common/
