--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -86,3 +86,6 @@ principals:
 - name: monitoring-tests
   domain: monitoring-tests
   kind: json
+- name: auth-tests
+  domain: auth-tests
+  kind: json
