--- a/web_common/Makefile
+++ b/web_common/Makefile
@@ -1,4 +1,4 @@
-PYTHONPATH := ../hail/python:../gear
+EXTRA_PYTHONPATH := ../hail/python:../gear
 PYTHON := PYTHONPATH=$${PYTHONPATH:+$${PYTHONPATH}:}$(EXTRA_PYTHONPATH) python3
 
 .PHONY: check
