[gear] fix db connection leak in transaction due to cancellation (#9307)
* [gear] fix db connection leak in transaction due to cancellation

* delint

* fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [flake8]
 # E501 line too long
 # W503 line break before binary operator
-ignore=E501,W503
+# E722 do not use bare 'except'
+ignore=E501,W503,E722
 
 # E402 module level import not at top of file
 # E241 multiple spaces after ','
