--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -41,11 +41,11 @@ spec:
           env:
            - name: HAIL_DEPLOY_CONFIG_FILE
              value: /deploy-config/deploy-config.json
-           - name: HAIL_CI_OAUTH_TOKEN
-             value: /secrets/oauth-token/oauth-token
+           #- name: HAIL_CI_OAUTH_TOKEN
+           #  value: /secrets/oauth-token/oauth-token
 {% if deploy %}
            - name: HAIL_WATCHED_BRANCHES
-             value: '[["hail-is/hail:main",true]]'
+             value: '[]'
 {% else %}
            - name: HAIL_WATCHED_BRANCHES
              value: '[["hail-ci-test/ci-test-{{create_ci_test_repo.token}}:master", true]]'
@@ -79,18 +79,20 @@ spec:
            - name: session-secret-key
              mountPath: /session-secret-key
              readOnly: true
-           - mountPath: /sql-config
-             name: sql-config
-             readOnly: true
-           - mountPath: /secrets/oauth-token
-             name: hail-ci-0-1-github-oauth-token
-             readOnly: true
+           # CPG-specific: don't attempt to mount secrets that aren't necessary
+           # for "dev deploy" only.
+           #- mountPath: /sql-config
+           #  name: sql-config
+           #  readOnly: true
+           #- mountPath: /secrets/oauth-token
+           #  name: hail-ci-0-1-github-oauth-token
+           #  readOnly: true
            - mountPath: /user-tokens
              name: ci-tokens
              readOnly: true
-           - mountPath: /zulip-config
-             name: zulip-config
-             readOnly: true
+           #- mountPath: /zulip-config
+           #  name: zulip-config
+           #  readOnly: true
            - name: ssl-config-ci
              mountPath: /ssl-config
              readOnly: true
@@ -112,19 +114,19 @@ spec:
          secret:
            optional: false
            secretName: session-secret-key
-       - name: sql-config
-         secret:
-           optional: false
-           secretName: "{{ ci_database.user_secret_name }}"
-       - name: hail-ci-0-1-github-oauth-token
-         secret:
-           secretName: hail-ci-0-1-github-oauth-token
+       #- name: sql-config
+       #  secret:
+       #    optional: false
+       #    secretName: "{{ ci_database.user_secret_name }}"
+       #- name: hail-ci-0-1-github-oauth-token
+       #  secret:
+       #    secretName: hail-ci-0-1-github-oauth-token
        - name: ci-tokens
          secret:
            secretName: ci-tokens
-       - name: zulip-config
-         secret:
-           secretName: zulip-config
+       #- name: zulip-config
+       #  secret:
+       #    secretName: zulip-config
        - name: ssl-config-ci
          secret:
            optional: false
