--- a/build.yaml
+++ b/build.yaml
@@ -219,6 +219,7 @@ steps:
        valueFrom: default_ns.name
    scopes:
     - test
+    - dev
    dependsOn:
     - default_ns
     - base_image
@@ -272,7 +273,6 @@ steps:
    dependsOn:
     - default_ns
     - copy_files
-    - create_database_server_config
     - delete_auth_tables
  - kind: runImage
    name: create_deploy_config
