[gateway] redirect to auth on 401 in internal

--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -57,6 +57,12 @@ server {
         # include /ssl-config/ssl-config-proxy.conf
     }
 
+    error_page 401 = @error401;
+
+    location @error401 {
+        return 302 https://auth.hail.is/login?next=https://$http_host$request_uri;
+    }
+
     listen [::]:443 ssl;
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/fullchain.pem;
