--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,6 +1,6 @@
 FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
 
-COPY pip.conf /root/.config/pip/pip.conf
+COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
 COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
 COPY docker/requirements.txt .
 RUN hail-pip-install -r requirements.txt pyspark==2.4.0
