--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+epiVersion: apps/v1
 kind: Deployment
 metadata:
   name: batch-driver
@@ -23,7 +23,7 @@ spec:
 {% if deploy %}
       priorityClassName: production
       nodeSelector:
-        preemptible: "false"      
+        preemptible: "false"
 {% else %}
       nodeSelector:
         preemptible: "true"
@@ -235,7 +235,7 @@ spec:
          - containerPort: 5000
         resources:
           requests:
-            memory: "250M"
+            memory: "10M"
             cpu: "100m"
           limits:
             memory: "1G"
