--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -33,8 +33,8 @@ spec:
           image: "{{ ci_image.image }}"
           resources:
             requests:
-              memory: "1G"
-              cpu: "400m"
+              memory: "20M"
+              cpu: "50m"
             limits:
               memory: "1G"
               cpu: "1"
