--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             name: grafana-config
       containers:
        - name: grafana
-         image: grafana/grafana:latest
+         image: grafana/grafana:7.3.7
          volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
