--- a/gateway/deployment.yaml
+++ b/gateway/deployment.yaml
@@ -37,8 +37,11 @@ spec:
          image: "{{ gateway_image.image }}"
          resources:
            requests:
-             memory: "250M"
-             cpu: "100m"
+             cpu: "20m"
+             memory: "20M"
+           limits:
+             cpu: "1"
+             memory: "1G"
          ports:
           - containerPort: 80
           - containerPort: 443
