--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -62,11 +62,11 @@ spec:
              readOnly: true
           resources:
             requests:
-              memory: "3.75G"
-              cpu: "800m"
+              cpu: "600m"
+              memory: "2150M"
             limits:
-              memory: "3.75G"
               cpu: "1"
+              memory: "2.5G"
           readinessProbe:
             tcpSocket:
               port: 5000
