--- a/.github/workflows/prod_deploy.yaml
+++ b/.github/workflows/prod_deploy.yaml
@@ -7,4 +7,6 @@ jobs:
   invoke-prod-deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: curl -X POST -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" -H "Content-Type:application/json" -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"]}' https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy
+      - name: "deploy"
+        run: |
+          curl -X POST -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" -H "Content-Type:application/json" -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"]}' https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy
