--- a/.github/workflows/prod_deploy.yaml
+++ b/.github/workflows/prod_deploy.yaml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - name: "deploy"
         run: |
-          curl -X POST -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" -H "Content-Type:application/json" -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"]}' https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy
+          curl --fail -X POST -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" -H "Content-Type:application/json" -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"]}' https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy
