--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -64,6 +64,8 @@ spec:
            value: "{{ global.project }}"
          - name: HAIL_DOCKER_ROOT_IMAGE
            value: "{{ global.docker_root_image }}"
+         - name: HAIL_DOCKER_PREFIX
+           value: "{{ global.docker_prefix }}"
          - name: HAIL_GCP_REGION
            valueFrom:
              secretKeyRef:
@@ -202,6 +204,8 @@ spec:
            value: "{{ global.project }}"
          - name: HAIL_DOCKER_ROOT_IMAGE
            value: "{{ global.docker_root_image }}"
+         - name: HAIL_DOCKER_PREFIX
+           value: "{{ global.docker_prefix }}"
          - name: HAIL_GCP_REGION
            valueFrom:
              secretKeyRef:
