--- a/build.yaml
+++ b/build.yaml
@@ -2304,6 +2304,7 @@ steps:
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2372,6 +2373,7 @@ steps:
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2440,6 +2442,7 @@ steps:
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2508,6 +2511,7 @@ steps:
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2576,6 +2580,7 @@ steps:
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2793,6 +2798,7 @@ steps:
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=0
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2844,6 +2850,7 @@ steps:
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=1
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2895,6 +2902,7 @@ steps:
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=2
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2946,6 +2954,7 @@ steps:
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=3
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2997,6 +3006,7 @@ steps:
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=4
      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
