--- a/build.yaml
+++ b/build.yaml
@@ -2989,7 +2989,7 @@ steps:
              -s \
              -vv \
              --instafail \
-             /io/test/test/hailtop/batch/
+             /io/test/hailtop/batch/
    inputs:
     - from: /repo/test
       to: /io/test
@@ -3040,7 +3040,7 @@ steps:
              -s \
              -vv \
              --instafail \
-             /io/test/test/hailtop/batch/
+             /io/test/hailtop/batch/
    inputs:
     - from: /repo/test
       to: /io/test
@@ -3091,7 +3091,7 @@ steps:
              -s \
              -vv \
              --instafail \
-             /io/test/test/hailtop/batch/
+             /io/test/hailtop/batch/
    inputs:
     - from: /repo/test
       to: /io/test
@@ -3142,7 +3142,7 @@ steps:
              -s \
              -vv \
              --instafail \
-             /io/test/test/hailtop/batch/
+             /io/test/hailtop/batch/
    inputs:
     - from: /repo/test
       to: /io/test
@@ -3180,7 +3180,7 @@ steps:
    script: |
      set -ex
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
-     cd /io/hailtop/hailtop/batch
+     cd /io/hailtop/batch
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
      python3 -m pytest --instafail \
