--- a/router/router.nginx.conf.in
+++ b/router/router.nginx.conf.in
@@ -114,12 +114,8 @@ server {
     server_name grafana.*;
 
     location / {
-        proxy_pass http://grafana/;
-        proxy_set_header Host              $http_host;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host  $updated_host;
-        proxy_set_header X-Forwarded-Proto $updated_scheme;
-        proxy_set_header X-Real-IP         $http_x_real_ip;
+        proxy_pass https://grafana/;
+        include /etc/nginx/proxy.conf;
     }
 
     listen 443 ssl;
